# canonicalwebteam.store-base

./: pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
canonicalwebteam/store_base/: app.py
canonicalwebteam/store_base/store/: views.py
docs/.sphinx/: pinned-requirements.txt
tests/store/: test_package_card_endpoint.py  test_packages.py  test_store_endpoint.py
