[tool.poetry]
name = "canonicalwebteam-store-base"

version = "1.3.0"
description = "An application base for all stores"
authors = ["Canonical Webteam <webteam@canonical.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "canonicalwebteam"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
"canonicalwebteam.flask-base" = ">=1.1.0,<3.0.0"
"canonicalwebteam.store-api" = "^5.0.0"
Flask-WTF = "^1.0.1"
pipenv = "^2024.0.0"
python-dotenv = "^1.0.0"
responses = "^0.22.0"
talisker = "^0.21.3"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
Flask-Testing = "^0.8.1"
freezegun = "^1.0.0"
tox = "^4.4.11"
black = "^24.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 
